# broad-information-research-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  wechat_fakeids_results.json
assets/output_templates/: academic_research_template.md  competitor_analysis_template.md  event_collection_template.md  market_trend_template.md  news_digest_template.md
broad_information_research/: __init__.py  deduplicator.py  mediacrawler_client.py  output_renderer.py  query_generator.py  scorer.py  source_selector.py  task_classifier.py
broad_information_research_mcp/: README.md  __init__.py  pyproject.toml  server.py
examples/: academic_research_example.md  ai_events_example.md  competitor_analysis_example.md  market_trend_example.md
references/: reliability_scoring.md  search_query_patterns.md  source_registry.md  source_registry_ai_events.md  task_taxonomy.md  wechat_accounts_registry.md  wechat_accounts_to_fill.md
scripts/: dedupe_results.py  export_report.py  fill_wechat_fakeids.sh  mediacrawler_wrapper.py  normalize_events.py  query_wechat_fakeids.py  save_to_file.py  score_sources.py
tests/: output_quality_tests.md  routing_tests.md  source_selection_tests.md
