[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broad-information-research"
version = "0.3.0"
description = "Broad information research: multi-mode research framework with MCP server support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "QClaw Team", email = "contact@qclaw.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# Both packages live as sibling directories at the repo root
[tool.hatch.build.targets.wheel]
packages = [
    "broad_information_research",
    "broad_information_research_mcp",
]
