[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broad-information-research-mcp"
version = "0.3.0"
description = "MCP server for broad information research — 8 tools for research workflow automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "QClaw Team", email = "contact@qclaw.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mcp>=1.0.0",
    # broad_information_research is installed alongside from root pyproject.toml
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["broad_information_research_mcp"]

[project.scripts]
broad-information-research-mcp = "broad_information_research_mcp.server:main"
